# circus_portfolio_backend

./: .envrc  .gitignore  CLAUDE.md  Dockerfile  README.MD  README.md  comments.db  docker-compose.yml  index.php  main.py  pom.xml  portfolio.db  pyproject.toml
.github/workflows/: deploy.yml
db/: database.py  db.php  init_db.php  models.py  schemas.py
jobs/: jobs.py  ops.py
services/: llm.py
src/main/java/com/philippeducasse/portfolio_backend/: PortfolioBackendApplication.java
src/main/java/com/philippeducasse/portfolio_backend/controller/: ReviewController.java  VenuesController.java
src/main/java/com/philippeducasse/portfolio_backend/model/: Review.java
src/main/java/com/philippeducasse/portfolio_backend/repository/: ReviewRepository.java
src/main/resources/static/: index.html
src/test/java/com/philippeducasse/portfolio_backend/: PortfolioBackendApplicationTests.java
tests/: conftest.py  test_api.py
